# fractals

./: .gitignore  CMakeLists.txt  README.md  mandelbrot.c
